--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "socket.io-client": "^4.8.1",
     "telegram": "^2.26.16"
   }
 }
